[project]
name = "example-202"
version = "1.0.0"
requires-python = ">=3.13"
description = ""
authors = [
    { name = "Tech Ops", email = "techops@bradsdeals.com" },
]
license = { text = "Proprietary" }

dependencies = [
    "Flask ~= 3.1.3",
    "Flask[async] ~= 3.1.3",
    "celery ~= 5.6.2",
    "boto3 ~= 1.42.60",
    "redis ~= 7.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.1.3",
    "pytest-asyncio == 0.24.*",
    "pytest-cov == 3.0.*",
]

[project.urls]
homepage = "https://github.com/mike-carey/example-202"

[tool.pytest.ini_options]
addopts = "--disable-warnings"
pythonpath = ["src"]
testpaths = [
    "test"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
